failing tests converted to pass